--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
         <button onmousedown="moveright()" onmouseup="clearmove()" ontouchstart="moveright()">RIGHT</button><br><br>
         <button onmousedown="movedown()" onmouseup="clearmove()" ontouchstart="movedown()">DOWN</button>
     </div>
-    <footer>Move with buttons or arrows on keyboard</footer>
+    <footer>Move with buttons or arrows on keyboard.</footer>
 </body>
 </html>
