--- a/index.html
+++ b/index.html
@@ -15,12 +15,6 @@
     <title>Document</title>
 </head>
 <body onload="startGame()">
-    <div>
-        <button onmousedown="moveup()" onmouseup="clearmove()" ontouchstart="moveup()">UP</button><br><br>
-        <button onmousedown="moveleft()" onmouseup="clearmove()" ontouchstart="moveleft()">LEFT</button>
-        <button onmousedown="moveright()" onmouseup="clearmove()" ontouchstart="moveright()">RIGHT</button><br><br>
-        <button onmousedown="movedown()" onmouseup="clearmove()" ontouchstart="movedown()">DOWN</button>
-    </div>
-    <footer>Move with buttons or arrows on keyboard.</footer>
+    <footer>Move with arrows on your keyboard.</footer>
 </body>
 </html>
